--- a/styles/style.css
+++ b/styles/style.css
@@ -129,8 +129,7 @@ body h1, h2 {
 }
 
 .navigation ul li {
-    margin-top: 15px;
-    display: inline;
+    margin-top: 15px;;
     margin-right: 30px;
 
 }
