--- a/styles/style.css
+++ b/styles/style.css
@@ -45,9 +45,8 @@ body h1, h2 {
 }
 
 .container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 0 20px;
+    width: min(90%, 600px);
+    margin-inline: auto;
 }
 
 .light-mode {
@@ -87,6 +86,7 @@ body h1, h2 {
     
 }
 
+
 .about-me {
     margin-top: 50px;
     font-weight: 350;
@@ -112,6 +112,9 @@ body h1, h2 {
     margin-top: 20px !important;
 }
 
+.col-online{
+    text-align: right;
+}
 
 
 .btn-contact{
@@ -161,11 +164,6 @@ body h1, h2 {
     text-decoration: underline;
 }
 
-.row {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-}
 
 .row-projects {
     display: flex;
@@ -185,14 +183,14 @@ body h1, h2 {
 
 
 
-.skills ul li::before {
+.skill p::before {
     content: "\2714"; /* Unicode hodnota pro symbol ✔ */
     display: inline-block;
     margin-right: 10px; /* Pokud chcete mezi symbolem a textem místo */
 }
 
 
-.skills ul li:hover::before {
+.skill p:hover::before {
     color: rgb(91, 239, 91); /* Změna barvy symbolu na zelenou při najetí myší */
 }
 
@@ -244,6 +242,21 @@ footer{
 
 
 
+/* Wrapper */
+.wrapper{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(100px, 100%), 1fr));
+    gap: 20px;
+    margin-top: 30px;
+
+}
+
+#skills-section .wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(min(200px, 100%), 1fr));
+}
+
+
+
 
 @keyframes blink {
     0% { opacity: 1; }
@@ -255,3 +268,22 @@ footer{
     animation: blink 1.2s infinite;
   }
   
+
+/* Media Queries */
+@media (max-width: 612px) {
+    .wrapper {
+        grid-template-columns: 1fr;
+    }
+
+    .project {
+        width: 100%;
+    }
+    .col-online {
+        text-align-last: left;
+        margin-bottom: 20px;
+
+    }
+    .live-online {
+        margin-bottom: 0px;
+    }
+}
